Fix image loading to database - switch to Cloudinary storage

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ CLERK_SECRET_KEY="your_clerk_secret_key_here"
 
 # Webhook
 SIGNING_SECRET="your_signing_secret_here"
+
+# Cloudinary (Alternative to Vercel Blob)
+CLOUDINARY_CLOUD_NAME="your_cloud_name_here"
+CLOUDINARY_API_KEY="your_api_key_here"
+CLOUDINARY_API_SECRET="your_api_secret_here"
